[package]
name = "bevy-minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
rand = "0.8.5"
colored = { version = "~2", optional = true }
bevy-inspector-egui = { version = "^0", optional = true }
